@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-29T08:13:51Z",
-  "count_outdated" : 187,
-  "uniques_outdated" : 160,
+  "timestamp" : "2023-10-01T08:12:23Z",
+  "count_outdated" : 188,
+  "uniques_outdated" : 161,
   "count" : 196,
   "uniques" : 169,
   "clones" : [
-    {
-      "timestamp": "2023-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-19T00:00:00Z",
       "count": 1,
