@@ -1,12 +1,7 @@
 {
-  "count": 9,
+  "count": 8,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-09-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-19T00:00:00Z",
       "count": 1,
